// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiple redirects are honored after enter: 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/redirected-again-after",
    "search": "",
    "state": Object {},
    "url": "/redirected-again-after",
  },
]
`;

exports[`multiple redirects are honored after enter: 1 - history_index 1`] = `1`;

exports[`multiple redirects are honored after enter: 1 - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/redirected-again-after",
        "search": "",
        "state": Object {},
        "url": "/redirected-again-after",
      },
    ],
    "from": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "direction": "forward",
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/first",
            "search": "",
            "state": Object {},
            "url": "/first",
          },
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/redirected-after",
            "search": "",
            "state": Object {},
            "url": "/redirected-after",
          },
        ],
        "index": 1,
        "kind": "replace",
        "length": 2,
        "pathname": "/redirected-after",
        "pop": false,
        "scene": "",
        "search": "",
        "status": 302,
        "url": "/redirected-after",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "REDIRECTED_AFTER",
    },
    "index": 1,
    "kind": "replace",
    "length": 2,
    "pathname": "/redirected-again-after",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "scene": "",
    "search": "",
    "status": 302,
    "url": "/redirected-again-after",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "REDIRECTED_AGAIN_AFTER",
}
`;

exports[`multiple redirects are honored after enter: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`multiple redirects are honored after enter: 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`multiple redirects are honored after enter: 1 - routes - REDIRECTED_AFTER - onComplete 1`] = `0`;

exports[`multiple redirects are honored after enter: 1 - routes - REDIRECTED_AFTER - thunk 1`] = `1`;

exports[`multiple redirects are honored after enter: 1 - routes - REDIRECTED_AGAIN_AFTER - onComplete 1`] = `1`;

exports[`multiple redirects are honored after enter: 1 - routes - SECOND - onComplete 1`] = `0`;

exports[`multiple redirects are honored after enter: 1 - routes - SECOND - thunk 1`] = `1`;

exports[`multiple redirects are honored after enter: 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/redirected-again-after",
        "search": "",
        "state": Object {},
        "url": "/redirected-again-after",
      },
    ],
    "from": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "direction": "forward",
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/first",
            "search": "",
            "state": Object {},
            "url": "/first",
          },
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/redirected-after",
            "search": "",
            "state": Object {},
            "url": "/redirected-after",
          },
        ],
        "index": 1,
        "kind": "replace",
        "length": 2,
        "pathname": "/redirected-after",
        "pop": false,
        "scene": "",
        "search": "",
        "status": 302,
        "url": "/redirected-after",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "REDIRECTED_AFTER",
    },
    "hash": "",
    "index": 1,
    "kind": "replace",
    "length": 2,
    "params": Object {},
    "pathname": "/redirected-again-after",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 302,
    "type": "REDIRECTED_AGAIN_AFTER",
    "universal": false,
    "url": "/redirected-again-after",
  },
  "title": "REDIRECTED_AGAIN_AFTER",
}
`;

exports[`multiple redirects are honored after enter: 1 - title 1`] = `"REDIRECTED_AGAIN_AFTER"`;

exports[`multiple redirects are honored: 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/redirected-again",
    "search": "",
    "state": Object {},
    "url": "/redirected-again",
  },
]
`;

exports[`multiple redirects are honored: 1 - history_index 1`] = `1`;

exports[`multiple redirects are honored: 1 - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/redirected-again",
        "search": "",
        "state": Object {},
        "url": "/redirected-again",
      },
    ],
    "from": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "direction": "forward",
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/first",
            "search": "",
            "state": Object {},
            "url": "/first",
          },
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/redirected",
            "search": "",
            "state": Object {},
            "url": "/redirected",
          },
        ],
        "index": 1,
        "kind": "replace",
        "length": 2,
        "pathname": "/redirected",
        "pop": false,
        "scene": "",
        "search": "",
        "status": 302,
        "url": "/redirected",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "REDIRECTED",
    },
    "index": 1,
    "kind": "replace",
    "length": 2,
    "pathname": "/redirected-again",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "scene": "",
    "search": "",
    "status": 302,
    "url": "/redirected-again",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "REDIRECTED_AGAIN",
}
`;

exports[`multiple redirects are honored: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`multiple redirects are honored: 1 - routes - REDIRECTED - beforeEnter 1`] = `1`;

exports[`multiple redirects are honored: 1 - routes - REDIRECTED - thunk 1`] = `0`;

exports[`multiple redirects are honored: 1 - routes - REDIRECTED_AGAIN - thunk 1`] = `1`;

exports[`multiple redirects are honored: 1 - routes - SECOND - beforeEnter 1`] = `1`;

exports[`multiple redirects are honored: 1 - routes - SECOND - thunk 1`] = `0`;

exports[`multiple redirects are honored: 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/redirected-again",
        "search": "",
        "state": Object {},
        "url": "/redirected-again",
      },
    ],
    "from": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "direction": "forward",
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/first",
            "search": "",
            "state": Object {},
            "url": "/first",
          },
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/redirected",
            "search": "",
            "state": Object {},
            "url": "/redirected",
          },
        ],
        "index": 1,
        "kind": "replace",
        "length": 2,
        "pathname": "/redirected",
        "pop": false,
        "scene": "",
        "search": "",
        "status": 302,
        "url": "/redirected",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "REDIRECTED",
    },
    "hash": "",
    "index": 1,
    "kind": "replace",
    "length": 2,
    "params": Object {},
    "pathname": "/redirected-again",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 302,
    "type": "REDIRECTED_AGAIN",
    "universal": false,
    "url": "/redirected-again",
  },
  "title": "REDIRECTED_AGAIN",
}
`;

exports[`multiple redirects are honored: 1 - title 1`] = `"REDIRECTED_AGAIN"`;
